# giga-mcp

./: .gitignore  README.md  SPEC.md  pyproject.toml
src/giga_mcp/: __main__.py  db.py  logging.py  models.py  server.py
src/giga_mcp/discovery/: __init__.py  allowlist.py  authority.py  github.py  probe.py  service.py  store.py
src/giga_mcp/sources/: __init__.py  service.py  store.py
src/instant_context/: __main__.py  db.py  logging.py  server.py
src/instant_context/discovery/: __init__.py  allowlist.py  authority.py  github.py  probe.py  service.py  store.py
src/instant_context/sources/: service.py  store.py
tests/: conftest.py
