[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "giga-mcp"
version = "0.1.0"
description = "generic official llms source discovery and retrieval mcp server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["fastmcp"]

[project.scripts]
giga-mcp = "giga_mcp.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
