[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instant-context"
version = "0.1.0"
description = "generic official llms source discovery and retrieval mcp server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["fastmcp"]

[project.scripts]
instant-context = "instant_context.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
